# adk-samples-1022

.specstory/history/: 2025-10-29_01-43Z-fatal-error-in-deployment-script.md  2025-10-29_cursor_fatal_error_in_deployment_script.md
python/agents/machine-learning-engineering/: adk_fix.py  adk_runner.py  interactive_test.py  pyproject.toml  session-f0656812-a859-4468-af4d-cee78c05bc62.json  test_agent.py
python/agents/machine-learning-engineering/deployment/: deploy.py
python/agents/machine-learning-engineering/machine_learning_engineering/workspace/california-housing-prices/: final_state.json
python/agents/machine-learning-engineering/machine_learning_engineering/workspace/california-housing-prices/1/: train0.py  train0_0.py  train1.py
python/agents/machine-learning-engineering/machine_learning_engineering/workspace/california-housing-prices/2/: train0.py
python/agents/machine-learning-engineering/machine_learning_engineering/workspace/california-housing-prices/ensemble/: ensemble0.py  ensemble1.py  final_solution.py
python/agents/machine-learning-engineering/machine_learning_engineering/workspace/california-housing-prices/ensemble/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
python/agents/machine-learning-engineering/machine_learning_engineering/workspace/california-housing-prices/ensemble/catboost_info/learn/: events.out.tfevents
python/agents/machine-learning-engineering/machine_learning_engineering/workspace/california-housing-prices/ensemble/final/: submission.csv
